added banner related things

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="styles/travel.css" class="css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
+            <img class="logo-pic" src="images/Group 40071 (2).png">
             <h3 class="nav-title">Lady <span class="text-primary">Butterflies</span></h3>
             <ul>
                 <li><a href="">Home</a></li>
@@ -22,9 +23,21 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
-
+        
     </header>
+
     <main>
+        <div class="banner">
+            <div>
+                <h2 class="banner-title">Explore Your Travel</h2>
+                <h5 class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus</h5>
+                <button class="button-1">Where go</button>
+                <button class="button-2">When</button>
+                <button class="button-3">Select Type</button>
+                <button class="button-4">Find Now</button>
+
+            </div>
+        </div>
 
     </main>
     <footer>
